cmake_minimum_required(VERSION 3.0)

include(../common.cmake)
include(../library.cmake)

set(DEST_DIR ../../../../fox/import)

#add_subdirectory(crypt)
add_subdirectory(image_formula)
add_subdirectory(image_text)
add_subdirectory(json)
add_subdirectory(lzma)
add_subdirectory(markup)
#add_subdirectory(mongo)
if("${TARGET_OS}" STREQUAL "osx")
  add_subdirectory(macos)
endif()
add_subdirectory(rawimage)
add_subdirectory(util_diff)
add_subdirectory(webimage)
#add_subdirectory(webm)
add_subdirectory(webp)
if("${TARGET_OS}" STREQUAL "win")
  add_subdirectory(windows)
endif()
